[package]
name = "rust-crawler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance async web crawler built with Rust"
license = "MIT"
repository = "https://github.com/yourusername/rust-crawler"

[dependencies]
# 异步运行时
tokio = { version = "1.43", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }

# HTML 解析
scraper = "0.23"

# 命令行参数解析
clap = { version = "4.5", features = ["derive"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV 导出
csv = "1.3"

# SQLite
rusqlite = { version = "0.34", features = ["bundled"] }

# 进度条
indicatif = "0.17"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL 处理
url = "2.5"

# 字符编码检测与转换
encoding_rs = "0.8"

# 错误处理
thiserror = "2.0"

# 异步 trait
async-trait = "0.1"

# 并发工具
crossbeam = "0.8"

[dev-dependencies]
# 测试用 mock HTTP 服务器
wiremock = "0.6"

# 测试用的临时文件
tempfile = "3.14"

[[bin]]
name = "rust-crawler"
path = "src/main.rs"
